make /roles endpoint
