# api/api/openapi.yml
@@ -56,6 +56,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /roles:
+    post:
+      summary: "ロールの追加"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestRole'
+      responses:
+        '200':
+          description: "成功。追加したロールをjsonで返します"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  name: {type: string, example: "Cleaning"}
+        '400':
+          description: "失敗。エラーメッセージをjsonで返します"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     ActivityData:
@@ -98,6 +122,10 @@ components:
       properties:
         ID: {type: integer, example: 1}
         Name: {type: string, example: "Cleaning"}
+    RequestRole:
+      type: object
+      properties:
+        name: {type: string, example: "Cleaning"}
     Location:
       type: object
       properties:
